tdf#116117 sfx2 store: don't inherit temp file permissions when renaming

This has to be handled explicitly, otherwise the tempfile permissions
(which intentionally don't respect umask()) would be preserved on
rename().

Reviewed-on: https://gerrit.libreoffice.org/51169
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit fb04780cf8523ad4e900ae8b9cecbe7a2697a12a)

Conflicts:
	sfx2/qa/cppunit/test_misc.cxx

Change-Id: I0a2681dbf06986e73f6e12d294e35e87b93b4f8a